# TradeMind

./: .env.example  .gitignore  Cargo.toml  README.md  cli.py  config.py  holdings.toml.example  llm.py  portfolio.py  pyproject.toml
.grok/skills/trademind/: SKILL.md
.grok/skills/trademind/references/: strategies.md
.grok/skills/trademind/scripts/: analyze.py
agent/: core.py  prompts.py
data/: cache.py  industry.py  source.py  ths_local.py
report/: __init__.py  html_report.py  server.py
strategy/: __init__.py  backtest.py  engine.py  execution.py  fundamentals.py  rules.py
tools/: __init__.py  indicators.py  market.py  portfolio.py  registry.py  strategy.py
